--- a/pages/informazio_orokorra.html
+++ b/pages/informazio_orokorra.html
@@ -27,36 +27,47 @@
             left: -250px;
             width: 250px;
             height: 100%;
-            background-color: #f8f9fa;
-            transition: all 0.3s;
+            background-color: #fff; /* Cambié a blanco */
+            transition: all 0.3s ease;
             z-index: 1000;
+            padding-top: 20px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
         }
 
         #sidebar.show {
             left: 0;
         }
 
-        #sidebar .close-btn {
-            font-size: 30px;
+        .close-btn {
             position: absolute;
             top: 10px;
-            right: 20px;
+            right: 10px;
             cursor: pointer;
+            font-size: 1.5rem;
+            color: #555; /* Gris medio */
         }
 
         .list-group-item {
-            cursor: pointer;
+            border: none;
+            padding: 15px 20px;
+            color: #444; /* Gris oscuro para el texto */
+            background-color: #fff; /* Fondo blanco */
+            transition: all 0.3s ease;
         }
 
-        .list-group-item:hover {
-            background-color: #007bff;
+        .list-group-item.active {
+            background-color: #333; /* Gris oscuro */
             color: white;
         }
 
-        .list-group-flush {
-            margin-bottom: 10px;
+        .list-group-item:hover {
+            background-color: #555; /* Gris medio */
+            color: white;
         }
 
+        .list-group-flush.mt-auto {
+            margin-top: auto;
+        }
         .content {
             transition: margin-left 0.3s;
             position: relative; /* Asegurarse de que el contenido tenga un posicionamiento */
@@ -90,10 +101,6 @@
 
             p {
                 font-size: 14px; /* Reducir tamaño de párrafos */
-            }
-
-            #sidebar {
-                width: 200px; /* Sidebar más estrecho en pantallas pequeñas */
             }
 
             /* Reducir el tamaño de las imágenes en móviles */
@@ -133,7 +140,7 @@
             }
 
             p {
-                font-size: 12px; /* Reducir aún más el tamaño de los párrafos */
+                font-size: 14px; /* Reducir aún más el tamaño de los párrafos */
             }
 
             .side-image {
