--- a/pages/inteligentzia_artifiziala.html
+++ b/pages/inteligentzia_artifiziala.html
@@ -151,6 +151,32 @@
         .nav-link {
             color: #052c53
         }
+        /* Sidebar */
+        #sidebar {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            height: 100%;
+            background-color: #fff; /* Cambié a blanco */
+            transition: all 0.3s ease;
+            z-index: 1000;
+            padding-top: 20px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        #sidebar.show {
+            left: 0;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            font-size: 1.5rem;
+            color: #555; /* Gris medio */
+        }
         .list-group-item {
             border: none;
             padding: 15px 20px;
@@ -167,6 +193,10 @@
         .list-group-item:hover {
             background-color: #555; /* Gris medio */
             color: white;
+        }
+
+        .list-group-flush.mt-auto {
+            margin-top: auto;
         }
     </style>
 
@@ -189,9 +219,9 @@
         <div class="list-group list-group-flush">
             <a href="../pages/informazio_orokorra.html" class="list-group-item list-group-item-action">Informazio
                 Orokorra</a>
-            <a href="../pages/ing_informatikoa.html" class="list-group-item list-group-item-action active">Ingeniaritza
+            <a href="../pages/ing_informatikoa.html" class="list-group-item list-group-item-action">Ingeniaritza
                 Informatikoa</a>
-            <a href="inteligentzia_artifiziala.html" class="list-group-item list-group-item-action">Inteligentzia
+            <a href="inteligentzia_artifiziala.html" class="list-group-item list-group-item-action active">Inteligentzia
                 Artifiziala</a>
         </div>
         <div class="list-group list-group-flush mt-auto">
